--- a/style.css
+++ b/style.css
@@ -70,6 +70,11 @@ body.dark .app .todo-container .todo-footer div:nth-child(2) + p:hover {
 body.dark .footer {
   color: hsl(234deg 11% 47%);
 }
+
+body.dark .app .mobile-footer-sec {
+  background-color: hsl(235, 24%, 19%);
+  box-shadow: 0px 10px 18px 1px hsl(235deg 6% 4% / 72%);
+}
 /* ///////////////// */
 
 body figure {
@@ -489,6 +494,10 @@ body .footer {
 
   .app .mobile-footer-sec p:hover {
     color: hsl(235, 19%, 35%);
+  }
+
+  .app .todo-container .todo .first-todo .remove-btn-parent .display {
+    display: block;
   }
 }
 
